# videorecorder

./: CMakeLists.txt  CSerialPortDemoNoGui.cpp  README.md  camera_v4l2_cuda copy.cpp  camera_v4l2_cuda-0921.cpp  camera_v4l2_cuda-1024 copy 2.cpp  camera_v4l2_cuda-1024 copy.cpp  camera_v4l2_cuda-1024.cpp  camera_v4l2_cuda-bk0720.cpp  camera_v4l2_cuda.cpp  camera_v4l2_cuda.cppbk  camera_v4l2_cuda.h  main-bk.cpp  main.cpp  readfile.cpp  record.tar.xz  serial.cpp  serial.h  serialrecorder.cpp  timestamp.cpp
KCFcpp-master/src/: runtracker.cpp
back/: serialrecorder.cpp  serialrecorder0627(2).cpp  serialrecorder0627.cpp
record/: CMakeLists.txt  a  a.cpp  test.cpp  test.pb.cc  test.pb.h  test.proto
sh/: saveserial.sh  savevideo1.sh  sv.service  tvs.sh
